--- a/client/src/css/Issue.css
+++ b/client/src/css/Issue.css
@@ -13,5 +13,5 @@
   font-size: 1.2em;
   font-weight: normal;
   margin: 0;
-  color: #7b7979;
+  color: #717171;
 }
