--- a/client/src/css/IssueStatus.css
+++ b/client/src/css/IssueStatus.css
@@ -7,5 +7,5 @@
 .IssueStatus-title {
   font-size: 1.2em;
   font-weight: normal;
-  color: #7b7979;
+  color: #717171;
 }
