--- a/client/src/css/VoteCounter.css
+++ b/client/src/css/VoteCounter.css
@@ -1,7 +1,7 @@
 .VoteCounter {
   margin: 1.5rem 0;
   font-weight: bold;
-  color: #7b7979;
+  color: #717171;
 }
 
 .VoteCounter-bar {
